--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,11 @@ html {
   box-sizing: inherit;
 }
 
+section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 /*--------------------header--------------------*/
 
 /*--------nav---- ------*/
@@ -25,7 +30,41 @@ html {
   margin-left: auto;
   margin-right: auto;
   padding left: 15px;
-  padding right: 15px;
+  padding right: 15px
+}
+
+.nav-list {
+  display: flex;
+}
+
+.container-1 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.nav-list li {
+  margin-right: 50px;
+  display: block;
+  padding-bottom: 32px;
+  padding-top: 32px;
+}
+
+.nav-list .nav-link+.nav-link-phone {
+  margin-left: 50px;
+}
+
+.nav-link {
+  padding-left: 331px;
+}
+
+.header-name {
+  margin-right: 93px;
+  margin-left: 215px;
+}
+
+.nav-contacts-item:last-child {
+  margin-right: 0px;
 }
 
 h1,
@@ -42,7 +81,7 @@ ul {
   margin: 0px;
   padding left: 0px;
   list-style: none;
-  text-decoration: none;
+  text-decoration: none
 }
 
 .page,
@@ -104,6 +143,16 @@ a[title-2] {
 /*--------------------Section-MAin--------------------*/
 .section-main {
   background-color: var(--additional-color);
+  height: 600px;
+  left: 0;
+  top: 80px;
+}
+
+.section-features-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-right: 30px;
 }
 
 .section-main-title {
@@ -113,21 +162,35 @@ a[title-2] {
   line-height: 1.36;
   text-align: center;
   letter-spacing: 0.06em;
+  margin-bottom: 30px;
+  text-align: center;
+  padding-top: 200px;
+  padding-bottom: 280px;
+  padding-left: 452px;
+  padding-right: 452px;
 }
 
 /*--------------------Кнопка "Заказать"-----------*/
-.btn-1,
-.btn-portfolio-1 {
+.btn-1 {
   background-color: var(--brand-color);
   display: inline-block;
   color: var(--background-color);
   border: 1px solid transparent;
+  text-align: center;
+  margin-top: 350px;
+  margin-bottom: 200px;
+}
+
+.btn-1-gen {
+  text-align: center;
 }
 
 .btn-portfolio {
   display: inline-block;
   border-radius: 4px;
   border-color: var(--background-color);
+  border: 1px solid transparent;
+  margin-right: 8px;
 }
 
 .btn-1:hover,
@@ -161,6 +224,15 @@ a[title-2] {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+  margin top: 0px;
+  margin bottom: 0px
+}
+
+.section-features-title-1,
+.section-features-title-2,
+.section-features-title-3,
+.section-features-title-4 {
+  margin-bottom: 10px;
 }
 
 .text-attention,
@@ -174,6 +246,12 @@ a[title-2] {
 }
 
 /*-----section What we do-----*/
+.section-whadwedo-list {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
 .section-whadwedo-title {
   font-weight: 700;
   font-size: 36px;
@@ -181,7 +259,10 @@ a[title-2] {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-color);
+  padding-bottom: 50px;
 }
+
+
 
 .section-whadwedo-photo-1,
 .section-whadwedo-photo-2,
@@ -192,6 +273,12 @@ a[title-2] {
 /*-----section OurTeam-----*/
 .section-ourteam {
   background-color: #f5f4fa;
+}
+
+.container-5 ul {
+  display: flex;
+  align-items: center;
+  justify-content: center
 }
 
 .section-ourteam-title {
@@ -305,6 +392,14 @@ p {
   color: var(--background-color);
 }
 
+.btn-portfolio-1 {
+  background-color: var(--brand-color);
+  display: inline-block;
+  color: var(--background-color);
+  border: 1px solid transparent;
+  text-align: center
+}
+
 .btn-portfolio {
   background-color: #f5f4fa;
 }
@@ -315,11 +410,61 @@ p {
   cursor: pointer;
 }
 
+.container-7 {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.new-nav-list li {
+  margin-right: 50px;
+  display: block;
+  padding-bottom: 32px;
+  padding-top: 32px;
+}
+
+.new-nav-list,
+.btn,
+.btn-portfolio-1 {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+
+.NEW-nav-list .NEW-nav-link+.new-nav-link-1 {
+  margin-left: 50px;
+
+}
+
+.container-8 {
+  display: flex;
+  align-items: center;
+  justify-content: center
+}
+
+.NEW-nav-link {
+  padding-left: 331px;
+}
+
+.NEW-header-name {
+  margin-right: 93px;
+  margin-left: 215px;
+}
+
+
+
 /*-----our-projects----*/
 
 .-our-projects-photo>li {
   background-color: var(--background-color);
 }
+
+.container-9 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 
 .-our-projects-photo h1 {
   font-weight: 700;
